--- a/pages/indexo/indexo.wxml
+++ b/pages/indexo/indexo.wxml
@@ -21,28 +21,29 @@
   </view>
 </view>
 <view class='body'>
+<!-- <canvas canvas-id="firstCanvas" style="width:710rpx;height:900rpx"></canvas> -->
   <view class="content">
     <view class="left">
       <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
-        <navigator url="../detail/detail?id={{item.id}}" class="item">
+        <view bindtap='goDetail' data-id='{{item.id}}' class="item">
           <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
           <view class="item-title-box">
             <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
             <view wx:else class="item-title">{{item.content}}</view>
           </view>
-        </navigator>
+        </view>
       </view>
       <view class='bottom'></view>
     </view>
     <view class="right">
       <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
-        <navigator url="../detail/detail?id={{item.id}}" class="item">
+        <view bindtap='goDetail' data-id='{{item.id}}' class="item">
           <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
           <view class="item-title-box">
            <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
             <view wx:else class="item-title">{{item.content}}</view>
           </view>
-        </navigator>
+        </view>
       </view>
       <view class='bottom'></view>
     </view>
