--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -38,6 +38,54 @@
   </view>
   <view class='line2 mt30'></view>
 </view>
+<view class='line2 mt30'></view>
+<view class='comment'>
+  <view class='ml20 pl10 mt30 f32 b'>笔记评论</view>
+  <view class='line3'></view>
+  <view class='r1 mt20 ml20 pl10'>
+    <image style='width:60rpx;' class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
+    <view class='ml20 comment2' bindtap='comment'>说点什么，让TA也认识看笔记的你吧...</view>
+  </view>
+  <view class='ml20 mt20 line4'></view>
+  <view wx:if="{{commentslen.length!=0}}">
+    <view wx:if="{{index<3}}" wx:for="{{comments}}" wx:key="{{item.id}}">
+      <view class='r1 cont mt30'>
+        <image class='img2 ml30' src='{{item.created_by.headimg}}' mode='aspectFill'></image>
+        <view class='col ml20'>
+          <view class='r1'>
+            <text style='width:500rpx;' class='f30'>{{item.created_by.nick}}</text>
+            <view class='block r1'>
+              <view data-id='{{item.id}}' bindtap='answer' style='margin-right:30rpx;color:#57b0f0'>回复</view>
+              <view data-id='{{item.id}}' wx:if="{{canDele==true}}" bindtap='deleteComment' style='font-size:32rpx;position:relative;top:5rpx;' class='iconfont icon-iconfontshanchu6'></view>
+              <!-- <view class='iconfont icon-dianzan'></view>
+              <view>2</view> -->
+            </view>
+          </view>
+          <view class='time2'>{{item.created_at}}</view>
+          <text class='content22'>{{item.comment}}</text>
+          <text decode="true" wx:if="{{item.answers.length==1}}" class='comment3'>{{item.answers[0].created_by.nick}}:{{item.answers[0].answer}}</text>
+          <text bindtap='getAllComments' wx:if="{{item.answers.length>1}}" class='comment3'>{{item.answers[0].created_by.nick}}等人 <text class='c57'>共{{item.answers.length}}条回复</text></text>
+        </view>
+      </view>
+      <view class='ml20 mt20 line4'></view>
+    </view>
+    <view wx:if="{{comments.length>0}}" class='cen w1 pt20 h60 f28' bindtap='getAllComments'>查看全部{{commentslen.length}}条评论
+      <span style="font-size:25rpx;position:relative;bottom:2rpx;" class='iconfont2 icon-qianjin'></span>
+    </view>
+  </view>
+</view>
+<view class='line2'></view>
+
+<view bindblur='inputVal3' style="bottom:{{height2}}px;" wx:if="{{input==true}}" class='comment-inp r1'>
+  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
+  <input adjust-position='{{false}}' focus="{{focus}}" value='{{commentVal}}' bindfocus="focusInput" bindblur='inputVal' class='input' placeholder='说点什么...'></input>
+  <view bindtap='send' class='ml20 f28 send'>发送</view>
+</view>
+<view style='bottom:{{height3}}px' wx:if="{{input2==true}}" class='comment-inp r1'>
+  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
+  <input bindfocus="focusInput2" adjust-position="{{false}}" focus="{{focus2}}" value='{{commentVal2}}' bindblur='inputVal2' class='input' placeholder='回复..'></input>
+  <view bindtap='sendanswer' class='ml20 f28 send'>回复</view>
+</view>
 <view class='contain3'>
   <view class='content3'>相关推荐</view>
   <view style='margin-left:20rpx' class="left">
@@ -69,12 +117,12 @@
 <view class='footer'>
   <view style='margin-left:86rpx;' class='r1'>
     <view wx:if="{{phone==null}}">
-      <button wx:if="{{list.collect==0}}" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}"  class='share2'>
+      <button wx:if="{{list.collect==0}}" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" class='share2'>
         <view data-id="{{list.id}}" style='color:#fff;font-size:50rpx;' class='iconfont icon-xin1'>
           <span class="share-1">收藏</span>
         </view>
       </button>
-      <button  wx:if="{{list.collect==1}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
+      <button wx:if="{{list.collect==1}}" data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
         <view data-id="{{list.id}}" style='color:red;font-size:50rpx;' class='iconfont icon-xin'>
           <span class="share-1">收藏</span>
         </view>
