--- a/app.wxss
+++ b/app.wxss
@@ -27,9 +27,68 @@
   font-size: 28rpx;
   color: #000;
 }
+.mask{
+
+    width: 100%;
+
+    height: 100%;
+
+    position: fixed;
+
+    top: 0;
+
+    left: 0;
+
+    background: #000;
+
+    z-index: 9000;
+
+    opacity: 0.7;
+
+}
+.closebtn{
+  width:200rpx;
+  height: 60rpx;
+}
+ 
+
+.modalDlg{
+
+    width: 580rpx;
+    height: 350rpx;
+    position: fixed;
+    top: 70%;
+    left: 0;
+
+    z-index: 9999;
+
+    margin: -370rpx 85rpx;
+
+    background-color: #fff;
+
+    border-radius: 36rpx;
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
+}
 .bottom{
   height: 100rpx;
   width: 100%;
+}
+.wait{
+  margin-left: 295rpx;
+  margin-top: 300rpx;
+}
+.wait image{
+ width: 160rpx;
+ height: 160rpx;
+}
+.ml38{
+  margin-left: 38rpx;
 }
 .f26{
   font-size: 32rpx;
