--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -56,7 +56,11 @@
   <view class='line2'></view>
 </view> -->
 <!-- 收藏 -->
-<view class="content">
+<view class='wait' wx:if="{{list2.length==0}}">
+ <image mode='widthFix'  src='../../images/loading.svg'></image>
+ <view class='f28 ml38'>加载中</view>
+</view>
+<view wx:else class="content">
   <view class="left">
     <view wx:if="{{index%2==0}}" wx:for="{{list2}}" wx:key="{{item.id}}">
       <!-- <template is="item" data="{{...item}}" ></template> -->
