--- a/pages/indexo/indexo.wxml
+++ b/pages/indexo/indexo.wxml
@@ -21,18 +21,31 @@
   </view>
 </view>
 <view class='body'>
-<!-- <canvas canvas-id='firstCanvas' style='width:{{canvas.width}}px;height:{{canvas.height}}px;'></canvas> -->
-<!-- <view class="mask" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
-<view class="modalDlg" >
-    
-    <button open-type="share" >分享</button>
-    <view class='closebtn' bindtap="go">点我可以关掉对话框</view>
-</view>
-<button  bindtap='submit'>分享</button> -->
-<view class='wait' wx:if="{{list.length==0}}">
- <image mode='widthFix'  src='../../images/loading.svg'></image>
- <view class='f28 ml38'>加载中</view>
-</view>
+  <!-- <canvas  canvas-id='firstCanvas' style='width:{{tphone.screenWidth}}px;height:{{tphone.screenHeight}}px;'></canvas>
+  <view class="mask" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
+  <view wx:if="{{showModal}}" class="modalDlg">
+    <view class='r1'>
+      <button class='btnshare' open-type="share">
+        <view style='color:#1bad1a;font-size:90rpx;' class='iconfont icon-weixin3'>
+        </view>
+        <view class='btn-text'>分享给朋友</view>
+      </button>
+      <view class='btn-line'></view>
+      <button bindtap='pengyouquan' class='btnshare'>
+        <view style='color:#1bad1a;font-size:90rpx;' class='iconfont icon-pengyouquan'>
+        </view>
+        <view class='btn-text'>分享朋友圈</view>
+      </button>
+    </view>
+    <view class='btn-line2'></view>
+    <view class='closebtn' bindtap="go">取消</view>
+  </view>
+  <button bindtap='submit'>分享</button>
+  <image src='{{ewrImg}}'></image> -->
+  <view class='wait' wx:if="{{list.length==0}}">
+    <image mode='widthFix' src='../../images/loading.svg'></image>
+    <view class='f28 ml38'>加载中</view>
+  </view>
   <view wx:else class="content">
     <view class="left">
       <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
@@ -51,7 +64,7 @@
         <view bindtap='goDetail' data-id='{{item.id}}' class="item">
           <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
           <view class="item-title-box">
-           <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+            <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
             <view wx:else class="item-title">{{item.content}}</view>
           </view>
         </view>
