--- a/app.wxss
+++ b/app.wxss
@@ -16,6 +16,21 @@
         "iconPath": "images/liaotian2.png",
         "selectedIconPath": "images/liaotian.png"
       }, */
+.bold{
+  font-weight: bold;
+}
+::-webkit-scrollbar{
+
+  width: 0;
+
+  height: 0;
+
+  color: transparent;
+
+}
+.canvas{
+  background-color: #fff;
+}
 .top {
   position: fixed;
   top: 0rpx;
@@ -27,6 +42,9 @@
   z-index: 4;
   font-size: 28rpx;
   color: #000;
+}
+.cen{
+  text-align: center;
 }
 .mask{
 
@@ -130,7 +148,7 @@ margin-top:70rpx;
   top: 0;
   background: #fff;
   color: #000;
-  z-index: 9999999;
+  z-index: 999;
 }
 .pl10{
   padding-left: 10rpx;
@@ -198,6 +216,7 @@ top:-2rpx;
   width: 100%;
   height: 140rpx;
   background-color: #fff;
+  z-index: 3;
 }
 
 .abs {
