--- a/pages/indexo/indexo.wxml
+++ b/pages/indexo/indexo.wxml
@@ -1,4 +1,5 @@
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
+<scroll-view scroll-y style="height:{{tphone.screenHeight}}px" bindscrolltoupper="onPullDownRefresh" bindscrolltolower="onReachBottom" enable-back-to-top="true">
 <view class='topone'>
   <view style='height:{{height4*2+20}}px' class='nav-wrap'>
     <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</view>
@@ -20,8 +21,15 @@
     <view wx:if="{{inputVal!=''}}" class="cancel" bindtap="search">搜索</view>
   </view>
 </view>
-<view class='body'>
-  <!-- <canvas  canvas-id='firstCanvas' style='width:{{tphone.screenWidth}}px;height:{{tphone.screenHeight}}px;'></canvas>
+<view class='recom'>
+  <scroll-view scroll-x="true" scroll-left="20" class='recommend'>
+    <view bindtap='change' class="f30 mt20 ml20 {{swiperIndex == index ? 'active' : ''}}" wx:for="{{titles}}" data-idx='{{index}}' data-search="{{item.search}}" data-searchtwo="{{item.search2}}">
+      {{item.name}}
+    </view>
+  </scroll-view>
+  </view>
+<view style='padding-top:340rpx;' class='body'>
+  <!-- <canvas class='canvas'  canvas-id='firstCanvas' style='width:{{tphone.screenWidth}}px;height:{{tphone.screenHeight}}px;'></canvas>
   <view class="mask" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
   <view wx:if="{{showModal}}" class="modalDlg">
     <view class='r1'>
@@ -31,7 +39,7 @@
         <view class='btn-text'>分享给朋友</view>
       </button>
       <view class='btn-line'></view>
-      <button bindtap='pengyouquan' class='btnshare'>
+      <button bindtap='btnchose' class='btnshare'>
         <view style='color:#1bad1a;font-size:90rpx;' class='iconfont icon-pengyouquan'>
         </view>
         <view class='btn-text'>分享朋友圈</view>
@@ -40,8 +48,8 @@
     <view class='btn-line2'></view>
     <view class='closebtn' bindtap="go">取消</view>
   </view>
-  <button bindtap='submit'>分享</button>
-  <image src='{{ewrImg}}'></image> -->
+  <button bindtap='submit'>分享</button> -->
+  
   <view class='wait' wx:if="{{list.length==0}}">
     <image mode='widthFix' src='../../images/loading.svg'></image>
     <view class='f28 ml38'>加载中</view>
@@ -73,3 +81,4 @@
     </view>
   </view>
 </view>
+</scroll-view>
