--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -54,15 +54,26 @@ margin-left:15rpx;
   margin-left: 50rpx;
   top:25rpx;
 }
+.recom{
+  position: fixed;
+  z-index: 4;
+  width: 100%;
+  background-color: #f5f5f5;
+  top:230rpx;
+}
 .recommend{
 width:100%;
 height:90rpx;
 box-shadow: 1px 1px 25rpx #f5f5f5;
 margin-top:20rpx;
-
 background-color: #fff;
+overflow: hidden;
+white-space: nowrap;
 
-  
+}
+.recommend view{
+  display: inline-block;
+  margin-left: 40rpx;
 }
 page{
   background-color: #f5f5f5;
@@ -114,4 +125,13 @@ padding-top:230rpx;
   position: fixed;
   width: 100%;
   z-index: 2;
+}
+::-webkit-scrollbar {
+
+  width: 0;
+
+  height: 0;
+
+  color: transparent;
+
 }
