--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -9,8 +9,8 @@
       <image mode='aspectFill' src='{{img2}}' class="index-profile__img"></image>
     </view>
     <view class='col ml20 w550'>
-     <view class='nick2'>{{userInfo.nick}}</view>
-     <view class='age'>年龄：{{age}}</view>
+      <view class='nick2 bold'>{{userInfo.nick}}</view>
+      <view class='age'>年龄：{{age}}</view>
       <view bindtap='updata' class='edit'>
         <text class='edit-text'>编辑资料</text>
       </view>
@@ -32,10 +32,12 @@
   <view class='line2'></view>
 </view>
 <!-- 收藏 -->
-<view class='wait' wx:if="{{list2.length==0}}">
- <image mode='widthFix'  src='../../images/loading.svg'></image>
- <view class='f28 ml38'>加载中</view>
+<view class='wait' wx:if="{{ishavecollect==true}}">
+  <image mode='widthFix' src='../../images/loading.svg'></image>
+  <view class='f28 ml38'>加载中</view>
 </view>
+<view class='isno' wx:if="{{isno==true}}">亲，你还没有添加任何收藏哦</view>
+<view wx:if="{{isno==true}}" class='cen'>~w_w~ ... ...</view>
 <view wx:else class="content">
   <view class="left">
     <view wx:if="{{index%2==0}}" wx:for="{{list2}}" wx:key="{{item.id}}">
@@ -43,8 +45,8 @@
       <navigator url="../detail/detail?id={{item.id}}" class="item">
         <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
         <view class="item-title-box">
-         <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
-            <view wx:else class="item-title">{{item.content}}</view>
+          <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+          <view wx:else class="item-title">{{item.content}}</view>
         </view>
       </navigator>
     </view>
@@ -55,12 +57,11 @@
       <navigator url="../detail/detail?id={{item.id}}" class="item">
         <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
         <view class="item-title-box">
-         <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
-            <view wx:else class="item-title">{{item.content}}</view>
+          <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+          <view wx:else class="item-title">{{item.content}}</view>
         </view>
       </navigator>
     </view>
     <view class='bottom'></view>
   </view>
 </view>
-
