--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -13,7 +13,10 @@ page{
   width: 100%;
   display: flex;
 }
-
+.video{
+  width: 750rpx;
+  height: 562rpx;
+}
 .swiper-item image {
   width: 750rpx;
   align-self: center;
@@ -257,4 +260,16 @@ z-index: 3;
 }
 .contact:hover{
   opacity: 1;
+}
+.mask2{
+   display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right:0;
+    bottom:0;
+    left:0;
+    background: rgba(255,255,255,0.9);
+    z-index: 998;
 }
